force-app/main/default/objects/Treatment__c/fields/Ai_LastError__c.field-meta.xml
<CustomField>
    <fullName>Ai_LastError__c</fullName>
    <label>AI Last Error</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>