force-app/main/default/objects/Treatment__c/fields/AI_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>AI_Request_Number__c</fullName>
    <label>AI Request Number</label>
    <type>AutoNumber</type>
    <displayFormat>TRT-AI-{00000}</displayFormat>
</CustomField>