force-app/main/default/objects/Treatment__c/fields/Needs_AI__c.field-meta.xml
<CustomField>
    <fullName>Needs_AI__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Needs AI</label>
    <type>Checkbox</type>
</CustomField>